bk_ida/gccida/c2/expand_inline_function
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_inline_function/src/integrate.c:1138:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v28; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_inline_function/src/integrate.c:1145:4: error: expected ';' after expression
rtx v35; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_inline_function/src/integrate.c:1145:5: error: use of undeclared identifier 'v35'
rtx v35; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_inline_function/src/integrate.c:1149:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v39; // r15d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_inline_function/src/integrate.c:1160:4: error: expected ';' after expression
rtx last_insn; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_inline_function/src/integrate.c:1160:5: error: use of undeclared identifier 'last_insn'
rtx last_insn; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_inline_function/src/integrate.c:1168:4: error: expected ';' after expression
rtx v58; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_inline_function/src/integrate.c:1168:5: error: use of undeclared identifier 'v58'
rtx v58; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_inline_function/src/integrate.c:1171:4: error: expected ';' after expression
rtx v61; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_inline_function/src/integrate.c:1171:5: error: use of undeclared identifier 'v61'
rtx v61; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_inline_function/src/integrate.c:1173:4: error: expected ';' after expression
rtx v63; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_inline_function/src/integrate.c:1173:5: error: use of undeclared identifier 'v63'
rtx v63; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_inline_function/src/integrate.c:1175:4: error: expected ';' after expression
rtx v65; // r13 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_inline_function/src/integrate.c:1175:5: error: use of undeclared identifier 'v65'
rtx v65; // r13 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_inline_function/src/integrate.c:1182:4: error: expected ';' after expression
rtx v72; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_inline_function/src/integrate.c:1182:5: error: use of undeclared identifier 'v72'
rtx v72; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_inline_function/src/integrate.c:1195:4: error: expected ';' after expression
rtx v85; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_inline_function/src/integrate.c:1195:5: error: use of undeclared identifier 'v85'
rtx v85; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_inline_function/src/integrate.c:1200:4: error: expected ';' after expression
rtx rtl; // r12 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_inline_function/src/obj/integrate.o] Error 1
